Added CSS classes to totals columns (cat and course) so that styles can be applied. Made them bold by default in standard anc custom_corners.
MDL-11666

--- a/theme/custom_corners/footer.html
+++ b/theme/custom_corners/footer.html
@@ -18,5 +18,14 @@
     <?php print_custom_corners_end(); ?>
 </div>
 </div>
+<?php 
+     $useridarray = array(2 // MD
+                          );
+     
+     if (!empty($performanceinfo) && isloggedin() && in_array($USER->id, $useridarray)) {
+          echo $performanceinfo;
+     }
+?>
+
 </body>
 </html>
