MDL-11664 :: added IE6/UE7 special CSS and because that didn't help at all places added JavaScript to correct some wrong calculated width.

--- a/theme/custom_corners/footer.html
+++ b/theme/custom_corners/footer.html
@@ -26,5 +26,12 @@
      }
 ?>
 
+<script type="text/javascript">
+/* <![CDATA[ */
+    $(document).ready(function() {
+        script.init();
+    });
+/* ]]> */
+</script>
 </body>
 </html>
