Updates for IE problems, mainly for RTL language display. IE6 still refuses to work properly :-(

--- a/theme/custom_corners/header.html
+++ b/theme/custom_corners/header.html
@@ -67,18 +67,21 @@
 <?php if ($home) {  // This is what gets printed on the home page only
 ?>
     <div id="header-home" class="clearfix">
-      <?php print_custom_corners_start(TRUE); ?>
-          <h1 class="headermain"><?php echo $heading ?></h1>
-          <div class="headermenu"><?php echo $menu ?></div>
+      <?php print_custom_corners_start(); ?>
+          <div class="wraphome">
+              <h1 class="headermain"><?php echo $heading ?></h1>
+              <div class="headermenu"><?php echo $menu ?></div>
+              <div class="clearer">&nbsp;</div>
+          </div>
       <?php print_custom_corners_end(); ?>
     </div>
 <?php } else {  // This is what gets printed on any other page with a heading
 ?>
     <div id="header" class="clearfix">
-      <?php print_custom_corners_start(); ?>
+        <?php print_custom_corners_start(); ?>
           <h1 class="headermain"><?php echo $heading ?></h1>
           <div class="headermenu"><?php echo $menu ?></div>
-    <div class="navbar clearfix">
+        <div class="navbar clearfix">
     <?php if ($navigation) { // This is the navigation table with breadcrumbs
     ?>
         <div class="breadcrumb"><?php print_navigation($navigation); ?></div>
