MDL-11553, reducing the number of bulk user selection buttons and lang changes

--- a/lang/en_utf8/help/bulkusers/selectedlist.html
+++ b/lang/en_utf8/help/bulkusers/selectedlist.html
@@ -1,11 +1,8 @@
 <h2>Selected user list...</h2>
 
 <ul>
-<li>Add selected available users - adds selected users from the Available list (on the left) to the Selected list (on the right).</li>
-<li>Add all available users - adds all users from the Available list (on the left) to the Selected list (on the right).</li>
-<li>Remove selected users - removes selected users from the Selected list (on the right).</li>
-<li>Remove all available users - removes all users from the Available list (on the left) from the Selected list (on the right).</li>
-<li>Clear selected users - removes selected users from the Selected list (on the right).</li>
-<li>Clear all users - removes all users from the Selected list (on the right).</li>
-
+<li>Add to selection - adds selected users from the Available list to the Selected list. Multiple users can be selected by holding down the Apple or Ctrl key whilst clicking on the users' names.</li>
+<li>Add all to selection - adds all users from the Available list to the Selected list.</li>
+<li>Clear selected users - removes selected users from the Selected list.</li>
+<li>Clear all users - removes all users from the Selected list.</li>
 </ul>
