--- a/mod/hotpot/mod.html
+++ b/mod/hotpot/mod.html
@@ -77,7 +77,7 @@ $text_source_options = array(
             } else {
                 print '<input type="hidden" name="namesource" value="'.HOTPOT_TEXTSOURCE_SPECIFIC.'" />';
             }
-            print '<input type="text" name="name" size=40 value="'.$form->name.'">';
+            print '<input type="text" name="name" size="40" value="'.$form->name.'" />';
         ?></td>
     </tr>
     <tr valign="top">
@@ -99,7 +99,6 @@ $text_source_options = array(
                     emoticonhelpbutton("form", "description");
                 }
             ?></font>
-            </span>
         </td>
         <td align="left"><?php 
             if ($form->mode=='add') {
@@ -145,7 +144,7 @@ $text_source_options = array(
         ?></td>
     </tr>
     <tr valign="top">
-        <td align="right" nowrap>
+        <td align="right" nowrap="true">
             <b><?php print get_string("location","hotpot") ?>:</b>
         </td>
         <td align="left"><?php
@@ -181,10 +180,10 @@ $text_source_options = array(
                 // set button url depending on Moodle version
                 if ($CFG->version < 2004083125) { // version may need refining
                     // up to and including Moodle 1.4.1
-                    $url = "/mod/resource/coursefiles.php?id=$id&wdir=$wdir";
+                    $url = "/mod/resource/coursefiles.php?id=$id&amp;wdir=$wdir";
                 } else {
                     // Moodle 1.4.2 and beyond
-                    $url = "/files/index.php?id=$id&wdir=$wdir&choose=form.reference";
+                    $url = "/files/index.php?id=$id&amp;wdir=$wdir&amp;choose=form.reference";
                 }
 
                 $strchooseafile = get_string("chooseafile", "resource");
@@ -193,12 +192,12 @@ $text_source_options = array(
         ?></td>
     </tr>
     <tr valign="top">
-        <td align="right" nowrap>
+        <td align="right" nowrap="true">
             <b><?php print_string("filename", "resource") ?>:</b>
         </td>
         <td align="left"><?php
             if (function_exists("button_to_popup_window")) {
-                print '<input name="reference" size="50" value="'.$form->reference.'">&nbsp;';
+                print '<input name="reference" size="50" value="'.$form->reference.'" />&nbsp;';
 
             } else if (function_exists("get_directory_list")) {
                 // Moodle 1.1 (and perhaps some others)
@@ -211,7 +210,7 @@ $text_source_options = array(
 
             } else {
                 // a very old Moodle (may be none left :-)
-                print '<input name="reference" size="50" value="'.$form->reference.'">&nbsp;';
+                print '<input name="reference" size="50" value="'.$form->reference.'" />&nbsp;';
             }
             print '<br />';
             hotpot_print_show_links($form->course, $form->location, $form->reference, '', ' &nbsp; ', true);
@@ -249,7 +248,7 @@ $text_source_options = array(
                 "return hotpot_lockoptions('form', 'studentfeedback', feedbacklockitems, feedbackoffvalues)"
             );
 			print '<span id="studentfeedbackurlSPAN">';
-            print "<input name=\"studentfeedbackurl\" size=\"50\" value=\"$form->studentfeedbackurl\">";
+            print "<input name=\"studentfeedbackurl\" size=\"50\" value=\"$form->studentfeedbackurl\" />";
 			print '</span>';
             helpbutton("studentfeedback", get_string("studentfeedback","hotpot"), "hotpot");
         ?></td>
@@ -312,14 +311,14 @@ $text_source_options = array(
     <tr valign="top">
         <td align="right"><b><?php print_string("requirepassword", "quiz") ?>:</b></td>
         <td align="left">
-            <input type="text" name="password" size=40 value="<?php p($form->password) ?>">
+            <input type="text" name="password" size="40" value="<?php p($form->password) ?>" />
             <?php helpbutton("requirepassword", get_string("requirepassword", "quiz"), "quiz"); ?>
         </td>
     </tr>
     <tr valign="top">
         <td align="right"><b><?php print_string("requiresubnet", "quiz") ?>:</b></td>
         <td align="left">
-            <input type="text" name="subnet" size=40 value="<?php p($form->subnet) ?>">
+            <input type="text" name="subnet" size="40" value="<?php p($form->subnet) ?>" />
             <?php helpbutton("requiresubnet", get_string("requiresubnet", "quiz"), "quiz"); ?>
         </td>
     </tr>
@@ -337,7 +336,7 @@ $text_source_options = array(
         <td align="right">&nbsp;</td>
         <td align="left">
             <!-- buttons -->
-            <input type="submit" value="<?php print_string("savechanges") ?>"> &nbsp; &nbsp;
+            <input type="submit" value="<?php print_string("savechanges") ?>" /> &nbsp; &nbsp;
             <input type="submit" name="cancel" value="<?php print_string("cancel") ?>" /><br />
             <?php
                 if (isset($CFG->release) && substr($CFG->release, 0, 3)>=1.5) {
@@ -351,18 +350,20 @@ $text_source_options = array(
                     print '<input type="hidden" name="displaynext" value="'.HOTPOT_NO.'" />'."\n";
                 }
             ?>
+        </td>
+    </tr>
 </table>
 
 <!-- hidden fields -->
-<input type="hidden" name="course"        value="<?php p($form->course) ?>">
-<input type="hidden" name="coursemodule"  value="<?php p($form->coursemodule) ?>">
-<input type="hidden" name="section"       value="<?php p($form->section) ?>">
-<input type="hidden" name="module"        value="<?php p($form->module) ?>">
-<input type="hidden" name="modulename"    value="<?php p($form->modulename) ?>">
-<input type="hidden" name="instance"      value="<?php p($form->instance) ?>">
-<input type="hidden" name="mode"          value="<?php p($form->mode) ?>">
+<input type="hidden" name="course"        value="<?php p($form->course) ?>" />
+<input type="hidden" name="coursemodule"  value="<?php p($form->coursemodule) ?>" />
+<input type="hidden" name="section"       value="<?php p($form->section) ?>" />
+<input type="hidden" name="module"        value="<?php p($form->module) ?>" />
+<input type="hidden" name="modulename"    value="<?php p($form->modulename) ?>" />
+<input type="hidden" name="instance"      value="<?php p($form->instance) ?>" />
+<input type="hidden" name="mode"          value="<?php p($form->mode) ?>" />
 <?php if (isset($USER->sesskey)) { ?>
-<input type="hidden" name="sesskey"       value="<?php p($USER->sesskey) ?>">
+<input type="hidden" name="sesskey"       value="<?php p($USER->sesskey) ?>" />
 <?php } ?>
 
 </form>
