MDL-12093 :: changed function call from get_in_popup to is_in_popup.

--- a/theme/custom_corners/footer.html
+++ b/theme/custom_corners/footer.html
@@ -3,8 +3,8 @@
 <!-- START OF FOOTER -->
 <?php 
     global $CFG, $COURSE; 
-    if (function_exists('get_in_popup')) {
-        $inpopup = get_in_popup();
+    if (function_exists('is_in_popup')) {
+        $inpopup = is_in_popup();
     } else {
         $inpopup = false;
     }
