--- a/lang/en_utf8/help/bulkusers/selectedlist.html
+++ b/lang/en_utf8/help/bulkusers/selectedlist.html
@@ -1,8 +1,9 @@
 <h2>Selected user list...</h2>
 
 <ul>
-<li>Add to selection - adds selected users from the Available list to the Selected list. Multiple users can be selected by holding down the Apple or Ctrl key whilst clicking on the users' names.</li>
-<li>Add all to selection - adds all users from the Available list to the Selected list.</li>
-<li>Clear selected users - removes selected users from the Selected list.</li>
-<li>Clear all users - removes all users from the Selected list.</li>
+<li>Add to selection - adds selected users from the Available list to the Selected list.
+Multiple users can be selected by holding down the Apple or Ctrl key whilst clicking on the users' names.</li>
+<li>Add all - adds all users from the Available list to the Selected list.</li>
+<li>Remove from selection - removes selected users from the Selected list.</li>
+<li>Remove all - removes all users from the Selected list.</li>
 </ul>
