MDL-6701 (broken wiki admin pages) merge to 1.6

--- a/mod/wiki/revertpages.html
+++ b/mod/wiki/revertpages.html
@@ -60,3 +60,4 @@ if($err->remark) {
 </TABLE>
   <input type="submit" name="proceed" value="<?php print get_string("revertchanges","wiki"); ?>" />
 </center>
+</FORM>
