Clarified help for importing custom user profile field data in response to http://moodle.org/mod/forum/discuss.php?d=84651

--- a/lang/en_utf8/help/uploadusers2.html
+++ b/lang/en_utf8/help/uploadusers2.html
@@ -14,7 +14,7 @@ databases or letting the users create their own accounts. See the Authentication
       <p><code>firstname, lastname</code> when inserting or <code>username</code> when updating</p>
       <p><strong>Optional field names:</strong> all of these are completely optional. If a values is present for the field in the file, then that value is used; else, the default value for that field is used.</p>
       <p><code>institution, department, city, country, lang, auth, ajax, timezone, idnumber, icq, phone1, phone2, address, url, description, mailformat, maildisplay, htmleditor, autosubscribe, emailstop</code></p>
-      <p><strong>Custom profile field names:</strong> optional, xxxxx is the real custom user profile field name</p>
+      <p><strong>Custom profile field names:</strong> optional, xxxxx is the real custom user profile field name (i.e. the unique short name)</p>
       <p><code>profile_field_xxxxx</code></p>
       <p><strong>Special field names:</strong> used for changing of usernames and deleting of users, see bellow</p>
       <p><code>deleted, oldusername</code></p>
