MDL-11099 and MDL-11655 Don't show external db password in clear

--- a/enrol/database/config.html
+++ b/enrol/database/config.html
@@ -56,7 +56,7 @@
 <tr>
     <td align="right">enrol_dbpass:</td>
     <td>
-        <input size="15" type="text" name="enrol_dbpass" value="<?php echo $frm->enrol_dbpass ?>" />
+        <input size="15" type="password" name="enrol_dbpass" value="<?php echo $frm->enrol_dbpass ?>" />
     </td>
     <td>
     <?php  print_string("dbpass","enrol_database") ?>
