--- a/lang/en_utf8/help/grade/aggregation.html
+++ b/lang/en_utf8/help/grade/aggregation.html
@@ -1,6 +1,10 @@
 <h1>Category aggregation</h1>
 <p>This menu lets you choose the aggregation strategy that will be used to calculate
 each participant's overall grade for this category. The different options are explained below.</p>
+
+<p>The grades are first converted to percentage values (interval from 0 to 1), then aggregated using one of
+the function bellow and finally converted to requested range of associated category item (<em>Minimum grade</em> and <em>Maximum grade</em>).</p>
+
 <p><strong>Important</strong>: An empty grade is simply a missing gradebook entry, and could
 mean different things. For example, it could be a participant who hasn't yet submitted an assignment,
 an assignment submission not yet graded by the teacher, or a grade that has been manually deleted by
@@ -11,53 +15,48 @@ the gradebook administrator. Caution in interpreting these "empty grades" is thu
         <th class="header">Strategy</th><th class="header">Description</th>
     </tr>
     <tr>
-        <td class="cell">Mean of all grades</td>
-        <td class="cell">All grades are added up, then divided by the total number of grades. Empty grades are included (they are interpreted as the item's minimum value).</td>
+        <td class="cell">Mean of grades</td>
+        <td class="cell">All grades summed and divided by the total number of grades.</td>
     </tr>
     <tr>
-        <td class="cell">Mean of non-empty grades</td>
-        <td class="cell">Same as above, except that empty grades are ignored.</td>
+        <td class="cell">Median of grades</td>
+        <td class="cell">The median is calculated by counting all the grades and selecting the grade that falls in the middle of that count
+                         (or the mean between the two middle grades if there is an even number of grades). The advantage over the mean is
+                         that it is not affected by outliers (grades which are uncommonly far from the mean).</td>
     </tr>
     <tr>
-        <td class="cell">Median of all grades</td>
-        <td class="cell">The median is calculated by counting all the grades and selecting the grade that falls in the middle of that count (or the mean between the two middle grades if there is an even number of grades). The advantage over the mean is that it is not affected by outliers (grades which are uncommonly far from the mean). Empty grades are included.</td>
+        <td class="cell">Smallest grade</td>
+        <td class="cell">The result is the relatively smallest grade. It is usually used in combination with <em>Aggregate only non-empty grades</em>.</td>
     </tr>
     <tr>
-        <td class="cell">Median of non-empty grades</td>
-        <td class="cell">Same as above, except that empty grades are ignored.</td>
+        <td class="cell">Highest grade</td>
+        <td class="cell">The result is the relatively highest grade.</td>
     </tr>
     <tr>
-        <td class="cell">Smallest grade of non-empty grades</td>
-        <td class="cell">Only the smallest grade is kept. Empty grades are ignored.</td>
+        <td class="cell">Mode of grades</td>
+        <td class="cell">The mode is the grade that occurs the most frequently. It is more often used for non-numerical grades.
+                         The advantage over the mean is that it is not affected by outliers (grades which are uncommonly far from the mean).</td>
     </tr>
     <tr>
-        <td class="cell">Highest grade of non-empty grades</td>
-        <td class="cell">Only the highest grade is kept. Empty grades are ignored.</td>
+        <td class="cell">Weighted mean</td>
+        <td class="cell">Each grade item can be given a weight, which is then used in the arithmetic mean aggregation to influence
+                         the importance of each item in the overall mean.</td>
     </tr>
     <tr>
-        <td class="cell">Mode of all grades</td>
-        <td class="cell">The mode is the grade that occurs the most frequently. It is more often used for non-numerical  The advantage over the mean is that it is not affected by outliers (grades which are uncommonly far from the mean). Empty grades are included.</td>
+        <td class="cell">Simple weighted mean</td>
+        <td class="cell">The difference from <em>Weighted mean</em> is that weight is calculated as <em>Maximun grade</em> - <em>Minumum grade</em>
+                         for each item. 100 point assignment has weight 100, 10 point assignment has weight 10.</td>
     </tr>
     <tr>
-        <td class="cell">Mode of non-empty grades</td>
-        <td class="cell">Same as above, except that empty grades are ignored.</td>
-    </tr>
-    <tr>
-        <td class="cell">Weighted mean of all grades</td>
-        <td class="cell">Each grade item can be given a weight, which is then used in the arithmetic mean aggregation to influence the importance of each item in the overall mean. Empty grades are included.</td>
-    </tr>
-    <tr>
-        <td class="cell">Weighted mean of non-empty grades</td>
-        <td class="cell">Same as above, except that empty grades are ignored.</td>
-    </tr>
-    <tr>
-        <td class="cell">Mean of all grades (extra credits)</td>
+        <td class="cell">Mean of grades (with extra credits)</td>
         <td class="cell">Arithmetic mean with a twist. An old, now unsupported aggregation strategy provided here only
-            for backward compatibility with old activities. Empty grades are included.</td>
+                         for backward compatibility with old activities.</td>
     </tr>
     <tr>
-        <td class="cell">Mean of non-empty grades (extra credits)</td>
-        <td class="cell">Same as above, except that empty grades are ignored.</td>
+        <td class="cell">Sum of grades</td>
+        <td class="cell">The sum of all grade values. Scale grades are ignored. This is the only type that does not convert the
+                         grades to percentages internally. The <em>Maximum grade</em> of associated category item is calculated
+                         automatically as a sum of maximums from all aggregated items.</td>
     </tr>
 
 </table>
