--- a/theme/cornflower/header.html
+++ b/theme/cornflower/header.html
@@ -20,16 +20,16 @@
 <?php //Accessibility: warning: ALT text will need editing when logo changes. 'headermain' is now H1.
 
       if ($home) {  // home page ?>
-    <div id="header-home">
+    <?php print_container_start(true, '', 'header-home'); ?>
         <h1 class="headermain"><img alt="[ REPLACE ME ]" src="<?php echo $CFG->wwwroot.'/theme/'.current_theme() ?>/images/logo.jpg" width="457" height="64" /></h1>
         <div class="headermenu"><?php echo $menu ?></div>
-    </div>
+    <?php print_container_end(); ?>
 <?php } else if ($heading) {  // This is what gets printed on any other page with a heading
 ?>
-    <div id="header-home">
+    <?php print_container_start(true, '', 'header'); ?>
         <h1 class="headermain"><img alt="[ REPLACE ME ]" src="<?php echo $CFG->wwwroot.'/theme/'.current_theme() ?>/images/logo.jpg" width="457" height="64" /></h1>
         <div class="headermenu"><?php echo $menu ?></div>
-    </div>
+    <?php print_container_end(); ?>
     <div class="clearer"></div>
 <?php } ?>
 <?php //Accessibility: breadcrumb trail/navbar now a DIV, not a table.
@@ -43,4 +43,4 @@
 <?php }  ?>
     <!-- END OF HEADER -->
     <div class="clearer"></div>
-    <div id="content">
+    <?php print_container_start(false, '', 'content'); ?>
