--- a/theme/standardwhite/header.html
+++ b/theme/standardwhite/header.html
@@ -20,16 +20,16 @@
 <?php //Accessibility: 'headermain' is now H1, see theme/standard/styles_layout.css: .headermain
       if ($home) {  // This is what gets printed on the home page only
 ?>
-    <div id="header-home" class="clearfix">
+    <?php print_container_start(true, '', 'header-home'); ?>
         <h1 class="headermain"><?php echo $heading ?></h1>
         <div class="headermenu"><?php echo $menu ?></div>
-    </div>
+    <?php print_container_end(); ?>
 <?php } else if ($heading) {  // This is what gets printed on any other page with a heading
 ?>
-    <div id="header" class="clearfix">
+    <?php print_container_start(true, '', 'header'); ?>
         <h1 class="headermain"><?php echo $heading ?></h1>
         <div class="headermenu"><?php echo $menu ?></div>
-    </div>
+    <?php print_container_end(); ?>
 <?php } ?>
 <?php //Accessibility: breadcrumb trail/navbar now a DIV, not a table.
       if ($navigation) { // This is the navigation bar with breadcrumbs  ?>
@@ -40,7 +40,7 @@
 <?php } else if ($heading) { // If no navigation, but a heading, then print a line
 ?>
         <hr />
-<?php } ?>
-    <div class="clearer">&nbsp;</div>
+<?php }
+    print_container_end(); ?>
     <!-- END OF HEADER -->
-    <div id="content">
+    <?php print_container_start(true, '', 'content'); ?>
