MDL-12221 custom themes revisited - fixed bug in previous commit, added more developer debug

--- a/theme/standardwhite/header.html
+++ b/theme/standardwhite/header.html
@@ -40,7 +40,6 @@
 <?php } else if ($heading) { // If no navigation, but a heading, then print a line
 ?>
         <hr />
-<?php }
-    print_container_end(); ?>
+<?php } ?>
     <!-- END OF HEADER -->
     <?php print_container_start(true, '', 'content'); ?>
