--- a/mod/quiz/config.html
+++ b/mod/quiz/config.html
@@ -149,7 +149,7 @@
         $perpage[0] = get_string('allinone', 'quiz');
 
         choose_from_menu($perpage, 'questionsperpage', $form->questionsperpage, '');
-        helpbutton('questionsperpage', get_string('questionsperpage'), 'quiz');
+        helpbutton('questionsperpage', get_string('questionsperpage', 'quiz'), 'quiz');
      ?>
     </td>
   <td align="center">
