--- a/theme/wood/header.html
+++ b/theme/wood/header.html
@@ -19,27 +19,25 @@
 
 <?php if ($home) {  // This is what gets printed on the home page only  
 ?>
-    <div id="header-home">
+    <div id="header-home" class="clearfix">
         <div class="headermain"><?php echo $heading ?></div>
         <div class="headermenu"><?php echo $menu ?></div>
     </div>
 <?php } else if ($heading) {  // This is what gets printed on any other page with a heading 
 ?>
-    <div id="header">
+    <div id="header" class="clearfix">
         <div class="headermain"><?php echo $heading ?></div>
         <div class="headermenu"><?php echo $menu ?></div>
     </div>
 <?php } ?>
-    <div class="clearer">&nbsp;</div>
 <?php if ($navigation) { // This is the navigation table with breadcrumbs  ?>
-    <table class="navbar"><tr><td>
+    <div class="navbar clearfix">
         <div class="breadcrumb"><?php print_navigation($navigation); ?></div>
         <div class="navbutton"><?php echo $button; ?></div>
-    </td></tr></table>
+    </div>
 <?php } else if ($heading) { // If no navigation, but a heading, then print a line  
 ?>
         <hr size="1" noshade="noshade" />
 <?php } ?>
-    <div class="clearer">&nbsp;</div>
     <!-- END OF HEADER -->
     <div id="content">
